Leak of MTAudioProcessingTap (304 bytes) in com.apple.WebKit.WebContent running WebKit layout tests https://bugs.webkit.org/show_bug.cgi?id=192896 <rdar://46732186>

Reviewed by Eric Carlson.

* platform/graphics/avfoundation/AudioSourceProviderAVFObjC.mm:
(WebCore::AudioSourceProviderAVFObjC::initCallback):


Canonical link: https://commits.webkit.org/207461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239419 268f45cc-cd09-0410-ab3c-d52691b4dbfc